04 May 2003 xsa
 * added verbosef(), now using it instead of debugf for the -V flag.
 * added predef_vars(), adding the static variables to the pmk.conf file. 
 * error checking when hadh_add() 'ing values. 

04 May 2003 mipsator
 * added autogrow in htable.
 * added hash_resize(), not tested yet.
 * added hash_add_cell() and make hash_add() and hash_resize() using it.
 * implemented depend_check().
 * added checks in str_to_def().
 * more checks in record_def().
 * added checks in label_set() and label_check().

03 May 2003 mipsator
 * rewritten record_def().
 * added stuff to store label states (now need to handle dependencies).
 * added cleaning function to simplify pmk (need more work).

02 May 2003 mipsator
 * improved a bit find_file().
 * rewritten dynarrays, mostly based on a patch from Ted Unangst.

30 Apr 2003 mipsator
 * added tagging stuff.

29 Apr 2003 mipsator
 * improved parse_cmd().
 * some fixes from Ted Unangst.

# PMK 0.4 released

28 Apr 2003 mipsator
 * many fixes for 0.4 release ...
 * fixed find_file() again should be the last time.
 

27 Apr 2003 mipsator
 * moved man pages in man directory.
 * added pmkfile(5).
 * fixed parse_conf_line().
 * added BIN_CC in get_binaries and use it in pmk_check_include()
   an pmk_check_lib().
 * more changes in process_template().

26 Apr 2003 mipsator
 * implemented pmk_check_lib().
 * added check_include_function in pmkcfg.sh .
 * improved str_to_dynary() and parse_conf_line().
 * pmk_check_include() has been updated to check function again.

25 Apr 2003 mipsator
 * pmk_check_binary() has been completed.
 * pmk_check_include() has been rewritten to have a better test.
 * process_template() has been improved for speed.
 * pmk_check_version() has been rewritten as the previous code
   didn't work fine.
 * improved get_line().

25 Apr 2003 xsa
 * moved BIN_PATH gathering in get_env_vars().
 * change behavior of pmksetup when a binary is not found.

24 Apr 2003 mipsator
 * written check_version().